--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "node-sass": "^4.9.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-icons": "^3.2.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.0"
   },
   "scripts": {
